# ris

catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel/include/facedetector/: Detection.h
catkin_ws/devel/include/ferns_ros/: DetectedPoint.h  Detection.h  ModelStatus.h
catkin_ws/devel/include/zbar_ros/: Marker.h
catkin_ws/src/facedetector/: package.xml
catkin_ws/src/facedetector/launch/: facedetector_kinect.launch  facedetector_mapper.launch
catkin_ws/src/facedetector/src/: .mapper.swp  mapper  mapper (copy)
catkin_ws/src/navigacija/: CMakeLists.txt  map.pgm
mapa/: mapa.pgm  mapa.yaml
movetest/: CMakeLists.txt  package.xml
movetest/launch/: movetest.launch
movetest/scripts/: movetest
navigacija/: CMakeLists.txt  package.xml
navigacija/launch/: amcl_demo.launch
navigacija/node/: approach.py  goto.py
src_tekmovanje/detection/dlib_detector/: package.xml
src_tekmovanje/localizer/src/: mapper
src_tekmovanje/mapa/: novamapa.pgm  novamapa.yaml  package.xml
src_tekmovanje/mapa/launch/: all.launch  amcl_demo.launch  sign_cilinder.launch
src_tekmovanje/mapgraph/: CMakeLists.txt  package.xml
src_tekmovanje/mapgraph/node/: graph.py  planner.py
src_tekmovanje/my_pcl_tutorial/: CMakeLists.txt  package.xml
src_tekmovanje/my_pcl_tutorial/launch/: blob.launch
src_tekmovanje/my_pcl_tutorial/src/: blob
src_tekmovanje/sign_detector/: CMakeLists.txt  package.xml
src_tekmovanje/sign_detector/launch/: sign_detector.launch
src_tekmovanje/sign_detector/node/: #sign_detector.py#  sign_detector.py
(+178 files in other folders)
